[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-jupyter-builder>=0.8.1"]
build-backend = "hatchling.build"

[project]
name = "jupyterlab_accessible_themes"
requires-python = ">=3.8"
dynamic = ["version", "description"]
license = {text = "BSD-3-Clause"}

[tool.hatch.version]
path = "package.json"
pattern = "\"version\":\\s*\"(?P<version>[^\"]+)\""

[tool.hatch.build.targets.sdist]
exclude = [".github"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlab_accessible_themes/labextensions/githublight" = "share/jupyter/labextensions/@jupyterlab-accessible-themes/jupyterlab-theme-githublight"
"jupyterlab_accessible_themes/labextensions/githubdark" = "share/jupyter/labextensions/@jupyterlab-accessible-themes/jupyterlab-theme-githubdark"
"jupyterlab_accessible_themes/labextensions/pitayasmoothie" = "share/jupyter/labextensions/@jupyterlab-accessible-themes/jupyterlab-theme-pitayasmoothie"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.8.1"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyterlab_accessible_themes/labextensions/githubdark/static/style.js",
    "jupyterlab_accessible_themes/labextensions/githubdark/package.json",
    "jupyterlab_accessible_themes/labextensions/githublight/static/style.js",
    "jupyterlab_accessible_themes/labextensions/githublight/package.json",
    "jupyterlab_accessible_themes/labextensions/pitayasmoothie/static/style.js",
    "jupyterlab_accessible_themes/labextensions/pitayasmoothie/package.json"
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build"
npm = ["jlpm"]

[tool.check-manifest]
ignore = [
    "jupyterlab_accessible_themes/labextensions/**",
    "yarn.lock",
    ".*",
    "package-lock.json"
]

[tool.ruff]
builtins = ["c"]
# E501 Line too long (158 > 100 characters)
# D400: First line should end with a period
# F401: Imported but unused
# F841: Local variable is assigned to but never used
ignore = ["D400", "E501"]
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
# A: builtins
# F: Pyflakes
# E,W: pycodestyle
# C4: flake8-comprehensions
# D: pydocstyle
select = ["A", "B", "C", "C4", "C9", "D", "E", "F", "W", "ICN"]

[tool.ruff.pydocstyle]
convention = "google" # Accepts: "google", "numpy", or "pep257".
